--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:focus {
+  outline: 0;
+  box-shadow: 0 0 0 2px #00875F;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
