--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+input[type="text"]::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
  
 @layer base {
   :root {
