--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,8 @@ input[type="text"]::-webkit-calendar-picker-indicator {
     @apply bg-background text-foreground;
   }
 }
+
+.minimalScroll {
+  scrollbar-width: thin;
+  scrollbar-color: #8D8D99 transparent;
+}
